Fixes margin issue on mobile view

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -262,7 +262,7 @@ p.admin-form-item {
 }
 
 .view-reports-container {
-  margin-bottom: 12vh;
+  margin-bottom: 22vh;
 }
 
 .admin-form-item {
